style.css
* {
    box-sizing: border-box;
    background-color: #ffebed;
    font-family: Tahoma, Verdana;
}


.img, .img-index {
    width: 640px;
    height: 480px;
    display: block;
    margin: 50px auto 10px;
    padding: 10px;
    background-color: #f6b6b7;
    border: 2px;
    border-style: dashed;
    border-color:#27153d;
    border-radius: 40px;
}


.img-index {
    height: 340px;
    margin-top: 10px
}


.head1,h1 {
    display: block;
    margin: 20px 0;
    padding-block: 5px;
    text-align: center;
    background-color: #27153d;
    color: #db7f8e;
}


h2,h3 {
    color:#27153d;
}

.tag {
    text-align: center;
    margin-top: -10px;
}

strong {
    display: block;
    color:#27153d;
}

a {
    color:#27153d;
    font-size: 15px;
}

a:hover, a:focus-visible {
    color:#f6b6b7;
}

button {
    background-color:#db7f8e;
    border-radius: 8px;
    border: solid 2px #27153d;
    padding: 6px 10px;
    font-size:small;
    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    color:#27153d;
}

ul, ol, h3, h2, p {
    text-align:justify;
    width:700px;
    margin: 0 auto;
}

h3, h2, strong {
    display: block;
    padding-block: 10px;
    margin: 0 auto;
}

p a {
    display: block;
    text-align: center;
    margin: 20px;

}
button:hover {
    background-color:#f6b6b7;
    color:#27153d;
    cursor:pointer;
}

.recipes li {
    width: 600px;
    text-align: justify;
}

.recipes {
    width: max-content;
    text-align: justify;
    padding-block: 10px;
}

